--- a/index.html
+++ b/index.html
@@ -98,22 +98,22 @@
         window.location.href = "page/saran.html";
       });
       document.getElementById("btn-7").addEventListener("click", function () {
-        window.location.href = "https://www.example3.com";
+        window.location.href = "";
       });
       document.getElementById("btn-8").addEventListener("click", function () {
         window.location.href = "page/store.html";
       });
       document.getElementById("btn-9").addEventListener("click", function () {
-        window.location.href = "https://www.example3.com";
+        window.location.href = "";
       });
       document.getElementById("btn-10").addEventListener("click", function () {
-        window.location.href = "https://www.example3.com";
+        window.location.href = "";
       });
       document.getElementById("btn-11").addEventListener("click", function () {
-        window.location.href = "https://www.example3.com";
+        window.location.href = "";
       });
       document.getElementById("btn-12").addEventListener("click", function () {
-        window.location.href = "https://www.example3.com";
+        window.location.href = "";
       });
 
       function copyText() {
