--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Nama Store</a>
+        <a class="navbar-brand" href="#">Merah Asia RP</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -44,8 +44,8 @@
 
     <div class="jumbotron jumbotron-fluid mt-3">
       <div class="container text-center">
-        <h1 class="display-4">Nama Store</h1>
-        <p class="lead">IP : 204.10.192.68:7008</p>
+        <h1 class="display-4">Merah Asia</h1>
+        <p class="lead">IP : 51.79.197.132:7771</p>
       </div>
     </div>
 
